--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -53,7 +53,7 @@ import { Image } from "astro:assets";
   <div class="flex md:min-w-[240px] avatar-container order-first md:order-last">
     <Image
       src="/avatar.webp"
-      class="h-32 w-32 sm:h-40 sm:w-40 md:h-48 md:w-48 object-cover shadow-2xl ring-2 ring-border-primary/20 avatar-glow mx-auto"
+      class="h-32 w-32 sm:h-40 sm:w-40 md:h-48 md:w-48 object-cover shadow-2xl ring-2 ring-border-primary/20 avatar-glow mx-auto rounded-lg"
       alt="José Donato"
       width={192}
       height={192}
